# fastapi-graphql-book-lending-library

./: .gitignore  alembic.ini  database.env  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0b4fb89fbfce_create_user_table.py
fastapi_graphql_book_lending_library/: __init__.py  query.py  types.py
fastapi_graphql_book_lending_library/database/models/: __init__.py  base.py  mixins.py  user.py
fastapi_graphql_book_lending_library/graphql/: __init__.py  query.py  types.py
fastapi_graphql_book_lending_library/graphql/resolvers/: __init__.py  general.py  user.py
tests/: test_fastapi_graphql_book_lending_library.py
