[tool.poetry]
name = "fastapi-graphql-book-lending-library"
version = "0.1.0"
description = ""
authors = ["Michael Lane <mikelane@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {version = "^0.63.0", extras = ["all"]}
SQLAlchemy = "^1.3.23"
SQLAlchemy-Utils = "^0.36.8"
graphene-sqlalchemy = "^2.3.0"
alembic = "^1.5.6"
FastAPI-SQLAlchemy = "^0.2.1"
psycopg2-binary = "^2.8.6"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-sugar = "^0.9.4"
pytest-icdiff = "^0.5"
pytest-xdist = "^2.2.1"
pytest-cov = "^2.11.1"
pytest-console-scripts = "^1.1.0"
pytest-picked = "^0.4.6"
pytest-factoryboy = "^2.1.0"
black = {version = "^20.8b1", allow-prereleases = true}
pytest-black = {version = "^0.3.12", allow-prereleases = true}
isort = {version = "^5.7.0", allow-prereleases = true}
pytest-isort = {version = "^1.3.0", allow-prereleases = true}
mypy = {version = "^0.812", allow-prereleases = true}
pytest-mypy = {version = "^0.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = ".pyi?$"
exclude = '''
(
  (
    \.eggs
    | \.git
    | \.mypy_cache
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
force_grid_wrap = 2
